plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.0'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'nbc.chillguys'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-websocket'

    //jwt
    implementation 'io.jsonwebtoken:jjwt:0.12.6'

    // queryDSL
    implementation 'io.github.openfeign.querydsl:querydsl-jpa:6.11'
    annotationProcessor 'io.github.openfeign.querydsl:querydsl-apt:6.11:jpa'
    //  "cannot find symbol: annotation Entity" 또는 "package jakarta.annotation does not exist" 오류 발생시 주석 풀고 추가
//    annotationProcessor 'jakarta.persistence:jakarta.persistence-api'
//    annotationProcessor 'jakarta.annotation:jakarta.annotation-api'

    // swagger
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'

    // prometheus
    implementation 'io.micrometer:micrometer-registry-prometheus'

    // redisson
    implementation 'org.redisson:redisson-spring-boot-starter:3.46.0'

    // tika
    implementation 'org.apache.tika:tika-core:3.1.0'

    // s3
    implementation platform('io.awspring.cloud:spring-cloud-aws-dependencies:3.3.0')
    implementation 'io.awspring.cloud:spring-cloud-aws-starter-s3'

    // LocalDateTime 직렬화
	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'

    // ES
    implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'

    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'com.h2database:h2'
    runtimeOnly 'com.mysql:mysql-connector-j'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
    useJUnitPlatform()
}
